<resources>
    <string name="language">en-US</string>
    <string name="app_name">My Last Movie</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Shows</string>
    <string name="tab_text_3">Favorite</string>
    <string name="lbl_header_reminder_setting">Reminder Setting</string>
    <string name="lbl_movie_title">Title</string>
    <string name="lbl_movie_year">Year</string>
    <string name="txt_movie_rate">Rate </string>
    <string name="lbl_movie_overview">Overview</string>
    <string name="lbl_movie_stars">Stars</string>
    <string name="lbl_movie_votes">Votes</string>
    <string name="lbl_movie_gross">Gross</string>

    <string name="lbl_tv_title">Title</string>
    <string name="lbl_tv_year">Year</string>
    <string name="lbl_tv_genre">Action, Thriller</string>
    <string name="lbl_tv_overview">Overview</string>
    <string name="lbl_tv_stars">Stars</string>
    <string name="lbl_tv_votes">Votes</string>

    <string name="txt_movie_title">Title</string>
    <string name="txt_movie_synopsis">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
    <string name="txt_movie_stars">Robert Downey Jr.</string>
    <string name="txt_movie_votes">6.7</string>
    <string name="txt_movie_year">2018</string>


    <string name="description">description</string>
    <string name="separator"> | </string>
    <string name="lbl_stars">Stars : </string>
    <string name="votes">Votes: </string>
    <string name="jacob_cedergren">Jacob Cedergren</string>
    <string name="r">R</string>
    <string name="_31_523">31,523</string>
    <string name="todo">TODO</string>
    <string name="_7_5">7.5</string>
    <string name="_85_min">85 min</string>

    <string name="lbl_header_movie_detail">Movie Detail </string>
    <string name="lbl_header_tv_detail">TV Show Detail </string>
    <string name="lbl_image_desc">Description</string>
    <string name="lbl_rating">Rating</string>
    <string name="title">Title</string>
    <string name="title_activity_favorite">Favorite</string>
    <string name="koneksi">No internet connection!</string>
    <string name="message">is added to favorite!</string>
    <string name="search">search</string>
    <string name="setting">setting</string>
    <string name="preferences">preferences</string>
    <string name="search_movie_hint">type film name</string>
    <string name="search_tv_hint">type tv show name</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text" translatable="false">My Favorite Movie</string>
    <string name="empty_text">NO DATA</string>

    <string name="release_reminder_key">RELEASE</string>
    <string name="release_reminder_title">Release Reminder</string>
    <string name="release_reminder_desc">Reminder showing the movie release</string>
    <string name="daily_reminder_key">DAILY</string>
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="daily_reminder_desc">Reminder for return to app</string>

    <string name="pref_sortBy_key" translatable="false">sort</string>
    <string name="pref_sortBy_default" translatable="false">default</string>
    <string name="pref_sortBy_due" translatable="false">due</string>
</resources>
