<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24px"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <group android:menuCategory="container" >
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setting"
            app:showAsAction="never" />

        <item
            android:id="@+id/prefs"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/preferences"
            app:showAsAction="never" />
    </group>

</menu>