<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="learning.shinesdev.mylastmovie.activity.movie.MovieFragment"
        android:label="@string/tab_text_1"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="learning.shinesdev.mylastmovie.activity.tvshow.TVShowFragment"
        android:label="@string/tab_text_2"
        tools:layout="@layout/fragment_tvshow" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="learning.shinesdev.mylastmovie.activity.favorite.FavoritePagerFragment"
        android:label="@string/tab_text_3"
        tools:layout="@layout/fragment_movie" />
</navigation>